# doc-rag

./: .gitignore  CLAUDE.md  Dockerfile  README.md  api.py  pyproject.toml
sample_docs/: employee_handbook.md  refund_policy.md
src/doc_rag/: __init__.py  chunker.py  cli.py  config.py  rag.py  store.py
tests/: test_chunker.py  test_store.py
